<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.plavos.insurance.plavosinsurance.About">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coverImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/plavos_insurance_logo_description"
                app:srcCompat="@drawable/plavos_insurance_logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/plavos_profile"
                        android:onClick="goToLinkedIn"/>

                    <TextView
                        android:id="@+id/businessTitleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:lineSpacingExtra="-5dp"
                        android:text="@string/businessTitle"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:onClick="goToWebsite"/>


                </LinearLayout>


                <Button
                    android:id="@+id/free_quote_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4843d2"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/quote_button"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:onClick="getFreeQuote"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">


                    <TextView
                        android:id="@+id/callTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/call_text"
                        android:drawableTop="@drawable/ic_call_black_24dp"
                        android:textColor="#4843d2"
                        android:onClick="clickToCall"/>

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/email_text"
                        android:drawableTop="@drawable/ic_mail_outline_black_24dp"
                        android:textColor="#4843d2"
                        android:onClick="sendEmail"/>

                    <TextView
                        android:id="@+id/googleBusinessTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/googleBusiness_text"
                        android:drawableTop="@drawable/ic_business_black_24dp"
                        android:textColor="#4843d2"
                        android:onClick="goToGoogleBusiness"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/businessDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/businessDescription"
                    android:layout_margin="10dp"/>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
